Document how to use Controls types in property declarations

Fixes: QTBUG-88222
Change-Id: I26ac9ce14fc86b3ada4e3024cb70b1ed4ce4755b
Reviewed-by: Nils Jeisecke <nils.jeisecke@saltation.com>
Reviewed-by: Fabian Kosmale <fabian.kosmale@qt.io>